Improve Chrome's WebSocket server to support ping/pong

Current design don't support ping/pong, so improve it.
When the server receives a ping frame, WebSocketEncoder::DecodeFrame function returns parse result status “FRAME_PING”.
Then, in WebSocket::Read function, WebSocket::Send function is called and it sends a pong frame to the client.
Additionally, add WebSocketEncoder::EncodePongFrame function to encode pong frames.

The android_web_socket.cc change is only renaming function: virtually nothing changed.

Bug: 865002
Change-Id: I80bef96be4afa2265abdeff06f58eb9a30574e7d
Reviewed-on: https://chromium-review.googlesource.com/c/chromium/src/+/3146712
Reviewed-by: Yoichi Osato <yoichio@chromium.org>
Reviewed-by: Yang Guo <yangguo@chromium.org>
Reviewed-by: Adam Rice <ricea@chromium.org>
Commit-Queue: Shiho Noda <shihonoda@google.com>
Cr-Commit-Position: refs/heads/main@{#922012}