net/server/web_socket.h
@@ -11,6 +11,7 @@
 #include "base/macros.h"
 #include "base/strings/string_piece.h"
 #include "net/traffic_annotation/network_traffic_annotation.h"
+#include "net/websockets/websocket_frame.h"
 
 namespace net {
 
@@ -25,6 +26,7 @@ class WebSocket final {
     // Final frame of a text message or compressed frame.
     FRAME_OK_FINAL,
     // Other frame of a text message.
+    FRAME_PING,
     FRAME_OK_MIDDLE,
     FRAME_INCOMPLETE,
     FRAME_CLOSE,
@@ -37,6 +39,7 @@ class WebSocket final {
               const NetworkTrafficAnnotationTag traffic_annotation);
   ParseResult Read(std::string* message);
   void Send(base::StringPiece message,
+            WebSocketFrameHeader::OpCodeEnum op_code,
             const NetworkTrafficAnnotationTag traffic_annotation);
   ~WebSocket();
 
@@ -49,6 +52,7 @@ class WebSocket final {
   HttpConnection* const connection_;
   std::unique_ptr<WebSocketEncoder> encoder_;
   bool closed_;
+  std::unique_ptr<NetworkTrafficAnnotationTag> traffic_annotation_ = nullptr;
 
   DISALLOW_COPY_AND_ASSIGN(WebSocket);
 };
