net/server/web_socket_encoder.cc
@@ -15,6 +15,7 @@
 #include "net/websockets/websocket_deflate_parameters.h"
 #include "net/websockets/websocket_extension.h"
 #include "net/websockets/websocket_extension_parser.h"
+#include "net/websockets/websocket_frame.h"
 
 namespace net {
 
@@ -26,15 +27,6 @@ namespace {
 const int kInflaterChunkSize = 16 * 1024;
 
 // Constants for hybi-10 frame format.
-
-typedef int OpCode;
-
-const OpCode kOpCodeContinuation = 0x0;
-const OpCode kOpCodeText = 0x1;
-const OpCode kOpCodeBinary = 0x2;
-const OpCode kOpCodeClose = 0x8;
-const OpCode kOpCodePing = 0x9;
-const OpCode kOpCodePong = 0xA;
 
 const unsigned char kFinalBit = 0x80;
 const unsigned char kReserved1Bit = 0x40;
@@ -77,19 +69,24 @@ WebSocket::ParseResult DecodeFrameHybi17(const base::StringPiece& frame,
 
   bool closed = false;
   switch (op_code) {
-    case kOpCodeClose:
+    case WebSocketFrameHeader::OpCodeEnum::kOpCodeClose:
       closed = true;
       break;
 
-    case kOpCodeText:
+    case WebSocketFrameHeader::OpCodeEnum::kOpCodeText:
       break;
 
-    case kOpCodeContinuation:  // Treated in the same as kOpCodeText.
+    case WebSocketFrameHeader::OpCodeEnum::
+        kOpCodeContinuation:  // Treated in the same as kOpCodeText.
       break;
 
-    case kOpCodeBinary:        // We don't support binary frames yet.
-    case kOpCodePing:          // We don't support binary frames yet.
-    case kOpCodePong:          // We don't support binary frames yet.
+    case WebSocketFrameHeader::OpCodeEnum::kOpCodePing:
+      break;
+
+    case WebSocketFrameHeader::OpCodeEnum::kOpCodeBinary:  // We don't support
+                                                           // binary frames yet.
+    case WebSocketFrameHeader::OpCodeEnum::kOpCodePong:    // We don't support
+                                                           // binary frames yet.
     default:
       return WebSocket::FRAME_ERROR;
   }
@@ -142,6 +139,8 @@ WebSocket::ParseResult DecodeFrameHybi17(const base::StringPiece& frame,
   size_t pos = p + actual_masking_key_length + payload_length - buffer_begin;
   *bytes_consumed = pos;
 
+  if (op_code == WebSocketFrameHeader::OpCodeEnum::kOpCodePing)
+    return WebSocket::FRAME_PING;
   if (closed)
     return WebSocket::FRAME_CLOSE;
   return final ? WebSocket::FRAME_OK_FINAL : WebSocket::FRAME_OK_MIDDLE;
@@ -150,9 +149,9 @@ WebSocket::ParseResult DecodeFrameHybi17(const base::StringPiece& frame,
 void EncodeFrameHybi17(base::StringPiece message,
                        int masking_key,
                        bool compressed,
+                       WebSocketFrameHeader::OpCodeEnum op_code,
                        std::string* output) {
   std::vector<char> frame;
-  OpCode op_code = kOpCodeText;
   size_t data_length = message.length();
 
   int reserved1 = compressed ? kReserved1Bit : 0;
@@ -303,12 +302,12 @@ WebSocket::ParseResult WebSocketEncoder::DecodeFrame(
   WebSocket::ParseResult result = DecodeFrameHybi17(
       frame, type_ == FOR_SERVER, bytes_consumed, &current_output, &compressed);
   if (result == WebSocket::FRAME_OK_FINAL ||
-      result == WebSocket::FRAME_OK_MIDDLE) {
+      result == WebSocket::FRAME_OK_MIDDLE || result == WebSocket::FRAME_PING) {
     if (continuation_message_frames_.empty())
       is_current_message_compressed_ = compressed;
     continuation_message_frames_.push_back(current_output);
   }
-  if (result == WebSocket::FRAME_OK_FINAL) {
+  if (result == WebSocket::FRAME_OK_FINAL || result == WebSocket::FRAME_PING) {
     *output = base::StrCat(continuation_message_frames_);
     if (is_current_message_compressed_) {
       if (!Inflate(output))
@@ -320,14 +319,22 @@ WebSocket::ParseResult WebSocketEncoder::DecodeFrame(
   return result;
 }
 
-void WebSocketEncoder::EncodeFrame(base::StringPiece frame,
-                                   int masking_key,
-                                   std::string* output) {
+void WebSocketEncoder::EncodeTextFrame(base::StringPiece frame,
+                                       int masking_key,
+                                       std::string* output) {
   std::string compressed;
+  constexpr auto op_code = WebSocketFrameHeader::OpCodeEnum::kOpCodeText;
   if (Deflate(frame, &compressed))
-    EncodeFrameHybi17(compressed, masking_key, true, output);
+    EncodeFrameHybi17(compressed, masking_key, true, op_code, output);
   else
-    EncodeFrameHybi17(frame, masking_key, false, output);
+    EncodeFrameHybi17(frame, masking_key, false, op_code, output);
+}
+
+void WebSocketEncoder::EncodePongFrame(base::StringPiece frame,
+                                       int masking_key,
+                                       std::string* output) {
+  constexpr auto op_code = WebSocketFrameHeader::OpCodeEnum::kOpCodePong;
+  EncodeFrameHybi17(frame, masking_key, false, op_code, output);
 }
 
 bool WebSocketEncoder::Inflate(std::string* message) {
